修改球员名字显示不全的问题

--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/SkyBallHetiRedMatchSubDsbd.storyboard
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/SkyBallHetiRedMatchSubDsbd.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e5f-fG-nJx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e5f-fG-nJx">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Sky Ball Heti RedHT Match Sub Dsbd View Controller-->
+        <!--Glod BuleHT Match Sub Dsbd View Controller-->
         <scene sceneID="Myf-2d-6eY">
             <objects>
                 <viewController id="e5f-fG-nJx" customClass="GlodBuleHTMatchSubDsbdViewController" sceneMemberID="viewController">
@@ -17,14 +17,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Mc-zd-9iO">
-                                <rect key="frame" x="0.0" y="0.0" width="90" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="125" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="90" id="euB-Ma-sjE"/>
+                                    <constraint firstAttribute="width" constant="125" id="euB-Ma-sjE"/>
                                 </constraints>
                             </tableView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PeF-H9-Hhy">
-                                <rect key="frame" x="91" y="0.0" width="284" height="667"/>
+                                <rect key="frame" x="126" y="0.0" width="249" height="667"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="kjK-BX-Wlp"/>
