--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleNews/SkyBallHetiRedNewsDetail.storyboard
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleNews/SkyBallHetiRedNewsDetail.storyboard
@@ -17,15 +17,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sVY-Jo-WX5" userLabel="playerContentView">
-                                <rect key="frame" x="0.0" y="44" width="414" height="233"/>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sVY-Jo-WX5" userLabel="playerContentView">
+                                <rect key="frame" x="0.0" y="44" width="0.0" height="0.0"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="sVY-Jo-WX5" secondAttribute="height" multiplier="16:9" id="d2h-hO-jwj"/>
+                                    <constraint firstAttribute="width" constant="0.10000000000000001" id="jlx-OX-nxC"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="ikq-Sg-jbE">
-                                <rect key="frame" x="0.0" y="283" width="414" height="519"/>
+                                <rect key="frame" x="0.0" y="50" width="414" height="752"/>
                                 <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dAJ-va-NcJ">
@@ -184,7 +185,6 @@
                             <constraint firstItem="RVw-GL-4rl" firstAttribute="bottom" secondItem="dAJ-va-NcJ" secondAttribute="bottom" id="WS3-GK-5fl"/>
                             <constraint firstItem="dAJ-va-NcJ" firstAttribute="leading" secondItem="RVw-GL-4rl" secondAttribute="leading" id="bJq-O5-DaI"/>
                             <constraint firstItem="RVw-GL-4rl" firstAttribute="trailing" secondItem="dAJ-va-NcJ" secondAttribute="trailing" id="iY8-nd-p5C"/>
-                            <constraint firstItem="RVw-GL-4rl" firstAttribute="trailing" secondItem="sVY-Jo-WX5" secondAttribute="trailing" id="kKb-yc-w9Y"/>
                         </constraints>
                     </view>
                     <connections>
@@ -195,7 +195,6 @@
                         <outlet property="commentInputView" destination="kTW-SS-LUD" id="CMA-WW-oLv"/>
                         <outlet property="comtentHeight" destination="Rle-eK-FMH" id="ZAE-s2-vMe"/>
                         <outlet property="contentRight" destination="qfL-7R-4Yw" id="1rh-CQ-4PD"/>
-                        <outlet property="playContentViewTralling" destination="kKb-yc-w9Y" id="j7f-wl-eww"/>
                         <outlet property="playerContentView" destination="sVY-Jo-WX5" id="W0i-Xi-gwn"/>
                         <outlet property="saveButton" destination="ghJ-F0-AhU" id="PAL-fF-x8R"/>
                         <outlet property="sendButton" destination="6lD-Qc-gR2" id="6wf-iM-gLh"/>
